optimize the SEO

--- a/Purchase.html
+++ b/Purchase.html
@@ -85,7 +85,7 @@
       <div class="container">
         <div class="currency-toggle-container">
           <span class="currency-label inr-label">₹ INR</span>
-          <label class="toggle-switch">
+          <label class="toggle-switch" id="currencyToggleContainer" for="currencyToggle">
             <input type="checkbox" id="currencyToggle">
             <span class="slider"></span>
           </label>
@@ -391,7 +391,7 @@
             </p>
             <form action="https://formspree.io/f/xrbyedlg" class="footer-newsletter-form" id="newsletterForm">
               <input type="email" placeholder="Enter your email" required />
-              <button type="submit">
+              <button type="submit" class="newsletter-button">
                 <i class="fas fa-paper-plane"></i>
               </button>
             </form>
