--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+
 
 </head>
 
@@ -446,7 +446,7 @@
               </p>
               <form action="https://formspree.io/f/xrbyedlg" class="footer-newsletter-form" id="newsletterForm">
                 <input type="email" placeholder="Enter your email" required />
-                <button type="submit">
+                <button type="submit" class="newsletter-submit">
                   <i class="fas fa-paper-plane"></i>
                 </button>
               </form>
