--- a/projects.html
+++ b/projects.html
@@ -358,7 +358,7 @@
                         <form action="https://formspree.io/f/xrbyedlg" class="footer-newsletter-form"
                             id="newsletterForm">
                             <input type="email" placeholder="Enter your email" required>
-                            <button type="submit">
+                            <button type="submit" class="newsletter-submit">
                                 <i class="fas fa-paper-plane"></i>
                             </button>
                         </form>
