--- a/projects.html
+++ b/projects.html
@@ -355,12 +355,11 @@
                         <p class="footer-newsletter-text">Subscribe to our newsletter for the latest updates and
                             offers
                         </p>
-                        <form action="https://formspree.io/f/xrbyedlg" class="footer-newsletter-form"
-                            id="newsletterForm">
-                            <input type="email" placeholder="Enter your email" required>
-                            <button type="submit" class="newsletter-submit">
-                                <i class="fas fa-paper-plane"></i>
-                            </button>
+                        <form action="https://formspree.io/f/xrbyedlg" class="footer-newsletter-form" id="newsletterForm">
+                          <input type="email" placeholder="Enter your email" required />
+                          <button type="submit" class="newsletter-button" aria-label="Subscribe to newsletter">
+                            <i class="fas fa-paper-plane"></i>
+                          </button>
                         </form>
                         <div class="footer-social">
                             <h4>Follow Us</h4>
