--- a/Purchase.html
+++ b/Purchase.html
@@ -85,8 +85,8 @@
       <div class="container">
         <div class="currency-toggle-container">
           <span class="currency-label inr-label">₹ INR</span>
-          <label class="toggle-switch" id="currencyToggleContainer" for="currencyToggle">
-            <input type="checkbox" id="currencyToggle">
+          <label class="toggle-switch" id="currencyToggleContainer">
+            <input type="checkbox" id="currencyToggle" aria-label="Toggle between INR and USD currency">
             <span class="slider"></span>
           </label>
           <span class="currency-label usd-label">USD $</span>
@@ -391,7 +391,7 @@
             </p>
             <form action="https://formspree.io/f/xrbyedlg" class="footer-newsletter-form" id="newsletterForm">
               <input type="email" placeholder="Enter your email" required />
-              <button type="submit" class="newsletter-button">
+              <button type="submit" class="newsletter-button" aria-label="Subscribe to newsletter">
                 <i class="fas fa-paper-plane"></i>
               </button>
             </form>
