--- a/about.html
+++ b/about.html
@@ -446,7 +446,7 @@
               </p>
               <form action="https://formspree.io/f/xrbyedlg" class="footer-newsletter-form" id="newsletterForm">
                 <input type="email" placeholder="Enter your email" required />
-                <button type="submit" class="newsletter-submit">
+                <button type="submit" class="newsletter-button" aria-label="Subscribe to newsletter">
                   <i class="fas fa-paper-plane"></i>
                 </button>
               </form>
