search engine optimization

--- a/Contact.html
+++ b/Contact.html
@@ -5,27 +5,48 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-  <meta name="description" content="Contact Creative Agency Zeros in Indore for web development, UI/UX design, mobile apps, SEO, and digital marketing services. Get a free consultation today.">
-  <meta name="keywords" content="contact, web development, ui/ux design, mobile apps, seo, digital marketing, creative agency, indore, vijaynagar">
+  <meta name="description" content="Contact Zeros Studio in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Get a free consultation today." />
+  <meta name="keywords" content="contact, web development, ui/ux design, mobile apps, seo, digital marketing, creative agency, indore, vijaynagar, consultation" />
   <meta name="author" content="Zeros Studio">
   <meta name="robots" content="index, follow">
-  <meta property="og:title" content="Contact Us - Creative Agency Zeros">
-  <meta property="og:description" content="Get in touch with our creative agency in Indore for web development, UI/UX design, mobile apps, SEO, and digital marketing services.">
+  <meta property="og:title" content="Contact Zeros Studio - Web Design Agency in Indore">
+  <meta property="og:description" content="Get in touch with our creative agency in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Schedule a free consultation.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://zerosstudio.vercel.app/Contact.html">
   <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
   <meta property="og:locale" content="en_IN">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Contact Us - Creative Agency Zeros">
-  <meta name="twitter:description" content="Get in touch with our creative agency in Indore for web development, UI/UX design, mobile apps, SEO, and digital marketing services.">
+  <meta name="twitter:title" content="Contact Zeros Studio - Web Design Agency in Indore">
+  <meta name="twitter:description" content="Get in touch with our creative agency in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Schedule a free consultation.">
   <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
   <link rel="canonical" href="https://zerosstudio.vercel.app/Contact.html">
-  <title>Creative Agency - Zeros</title>
+  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/Contact.html">
+  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/Contact.html">
+  <title>Contact Zeros Studio - Web Design Agency in Indore</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="./assets/css/contact.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./assets/css/critical.css">
+  <link rel="preload" href="./assets/css/contact.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="./assets/css/contact.min.css"></noscript>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [{
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://zerosstudio.vercel.app/"
+    },{
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Contact",
+      "item": "https://zerosstudio.vercel.app/Contact.html"
+    }]
+  }
+  </script>
  
 </head>
 
@@ -309,8 +330,17 @@
                 <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer" title="LinkedIn">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
+                <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer" title="LinkedIn">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
                 <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" title="Twitter">
                   <i class="fab fa-twitter"></i>
+                </a>
+                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" title="Facebook">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" title="YouTube">
+                  <i class="fab fa-youtube"></i>
                 </a>
               </div>
             </div>
@@ -323,7 +353,7 @@
     </div>
   </footer>
 
- <script src="./assets/js/contact.js"></script>
+ <script src="./assets/js/contact.min.js"></script>
 </body>
 
 </html>
