--- a/projects.html
+++ b/projects.html
@@ -5,29 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-    <meta name="description" content="View our portfolio of creative projects at Zeros Studio - Web design, mobile apps, and branding solutions for clients in Indore and beyond.">
-    <meta name="keywords" content="portfolio, web design projects, mobile apps, branding, creative work, indore">
+    <meta name="description" content="View our portfolio of creative projects at Zeros Studio - Web design, mobile apps, and branding solutions for clients. See our successful case studies." />
+    <meta name="keywords" content="portfolio, web design projects, mobile apps, branding, creative work, indore, case studies, digital projects" />
     <meta name="author" content="Zeros Studio">
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Our Projects - Creative Agency Zeros">
-    <meta property="og:description" content="View our portfolio of creative projects including web design, mobile apps, and branding solutions for clients in various industries.">
+    <meta property="og:title" content="Portfolio - Zeros Studio Creative Projects & Case Studies">
+    <meta property="og:description" content="View our portfolio of creative projects including web design, mobile apps, and branding solutions for clients in various industries. See our successful case studies.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://zerosstudio.vercel.app/projects.html">
     <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
     <meta property="og:locale" content="en_IN">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Our Projects - Creative Agency Zeros">
-    <meta name="twitter:description" content="View our portfolio of creative projects including web design, mobile apps, and branding solutions for clients in various industries.">
+    <meta name="twitter:title" content="Portfolio - Zeros Studio Creative Projects & Case Studies">
+    <meta name="twitter:description" content="View our portfolio of creative projects including web design, mobile apps, and branding solutions for clients in various industries. See our successful case studies.">
     <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
     <link rel="canonical" href="https://zerosstudio.vercel.app/projects.html">
-    <title>Projects - Creative Agency - Zeros</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/projects-styles.css">
+    <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/projects.html">
+    <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/projects.html">
+    <title>Portfolio - Zeros Studio Creative Projects & Case Studies</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./assets/css/critical.css">
+    <link rel="preload" href="./assets/css/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" href="./assets/css/projects-styles.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="./assets/css/style.min.css"></noscript>
+    <noscript><link rel="stylesheet" href="./assets/css/projects-styles.min.css"></noscript>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollToPlugin.min.js"></script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://zerosstudio.vercel.app/"
+      },{
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Projects",
+        "item": "https://zerosstudio.vercel.app/projects.html"
+      }]
+    }
+    </script>
 </head>
 
 <body>
@@ -407,7 +429,7 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-   <script src="./assets/js/projects.js"></script>
+   <script src="./assets/js/projects.min.js"></script>
 </body>
 
 </html>
