--- a/Purchase.html
+++ b/Purchase.html
@@ -5,30 +5,51 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-  <meta name="description" content="View our affordable pricing plans for web development, UI/UX design, mobile apps, SEO, and digital marketing services in Indore. Choose the perfect plan for your business.">
-  <meta name="keywords" content="pricing, web development, ui/ux design, mobile apps, seo, digital marketing, affordable, creative agency, indore">
+  <meta name="description" content="View our transparent pricing plans for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services in Indore. Choose the perfect plan for your business growth." />
+  <meta name="keywords" content="pricing, web development, ui/ux design, mobile apps, seo, digital marketing, affordable, creative agency, indore, website pricing, digital services" />
   <meta name="author" content="Zeros Studio">
   <meta name="robots" content="index, follow">
-  <meta property="og:title" content="Pricing Plans - Creative Agency Zeros">
-  <meta property="og:description" content="View our affordable pricing plans for web development, UI/UX design, mobile apps, SEO, and digital marketing services. Choose the perfect plan for your business.">
+  <meta property="og:title" content="Pricing Plans - Zeros Studio Web Design Services">
+  <meta property="og:description" content="View our transparent pricing plans for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Choose the perfect plan for your business growth in Indore.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://zerosstudio.vercel.app/Purchase.html">
   <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
   <meta property="og:locale" content="en_IN">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Pricing Plans - Creative Agency Zeros">
-  <meta name="twitter:description" content="View our affordable pricing plans for web development, UI/UX design, mobile apps, SEO, and digital marketing services. Choose the perfect plan for your business.">
+  <meta name="twitter:title" content="Pricing Plans - Zeros Studio Web Design Services">
+  <meta name="twitter:description" content="View our transparent pricing plans for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Choose the perfect plan for your business growth in Indore.">
   <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
   <link rel="canonical" href="https://zerosstudio.vercel.app/Purchase.html">
-  <title>Creative Agency - Zeros</title>
+  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/Purchase.html">
+  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/Purchase.html">
+  <title>Pricing Plans - Zeros Studio Web Design Services</title>
 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
-  <link rel="stylesheet" href="./assets/css/purchase-styles.css">
-  <link rel="stylesheet" href="purchase-styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./assets/css/critical.css">
+  <link rel="preload" href="./assets/css/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="./assets/css/purchase-styles.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="./assets/css/style.min.css"></noscript>
+  <noscript><link rel="stylesheet" href="./assets/css/purchase-styles.min.css"></noscript>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [{
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://zerosstudio.vercel.app/"
+    },{
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Pricing",
+      "item": "https://zerosstudio.vercel.app/Purchase.html"
+    }]
+  }
+  </script>
 </head>
 
 <body>
@@ -102,8 +123,8 @@
           <div class="pricing-card">
             <h3>Starter</h3>
             <p class="price">
-              <span class="inr-price">₹2,200</span>
-              <span class="usd-price" style="display: none;">$29</span>
+              <span class="inr-price">₹7,000</span>
+              <span class="usd-price" style="display: none;">$85</span>
               <span class="period">/month</span>
             </p>
             <ul class="features-list">
@@ -121,8 +142,8 @@
             <div class="recommended-badge">Popular</div>
             <h3>Professional</h3>
             <p class="price">
-              <span class="inr-price">₹5,900</span>
-              <span class="usd-price" style="display: none;">$79</span>
+              <span class="inr-price">₹25,000</span>
+              <span class="usd-price" style="display: none;">$300</span>
               <span class="period">/month</span>
             </p>
             <ul class="features-list">
@@ -142,8 +163,8 @@
           <div class="pricing-card">
             <h3>Enterprise</h3>
             <p class="price">
-              <span class="inr-price">₹11,200</span>
-              <span class="usd-price" style="display: none;">$149</span>
+              <span class="inr-price">₹50,000+</span>
+              <span class="usd-price" style="display: none;">$600</span>
               <span class="period">/month</span>
             </p>
             <ul class="features-list">
@@ -285,6 +306,41 @@
           <h2>Frequently Asked Questions</h2>
           <p>Find answers to common questions about our pricing plans</p>
         </div>
+        <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "FAQPage",
+          "mainEntity": [{
+            "@type": "Question",
+            "name": "Can I change plans later?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes, you can upgrade or downgrade your plan at any time. Your billing will be adjusted accordingly based on the remaining time in your billing cycle."
+            }
+          },{
+            "@type": "Question",
+            "name": "Is there a setup fee?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "No, we don't charge any setup fees. All plans include free website setup and migration services."
+            }
+          },{
+            "@type": "Question",
+            "name": "What payment methods do you accept?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "We accept all major credit cards including Visa, MasterCard, American Express, and Discover. We also support PayPal and bank transfers."
+            }
+          },{
+            "@type": "Question",
+            "name": "Do you offer discounts for non-profits?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Yes, we offer special pricing for non-profit organizations and educational institutions. Please contact our sales team for more information."
+            }
+          }]
+        }
+        </script>
         <div class="faq-container">
           <div class="faq-item">
             <div class="faq-question">
@@ -407,8 +463,17 @@
                 <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer" title="LinkedIn">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
+                <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer" title="LinkedIn">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
                 <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" title="Twitter">
                   <i class="fab fa-twitter"></i>
+                </a>
+                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" title="Facebook">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" title="YouTube">
+                  <i class="fab fa-youtube"></i>
                 </a>
               </div>
             </div>
@@ -420,7 +485,7 @@
       </div>
     </div>
   </footer>
-  <script src="./assets/js/purchase.js"></script>
+  <script src="./assets/js/purchase.min.js"></script>
 </body>
 
 </html>
