--- a/index.html
+++ b/index.html
@@ -1,33 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-  <meta name="description" content="ZEROS Creative Agency - We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results.">
-  <meta name="keywords" content="creative agency, web design, UI/UX, web development, digital agency, Indore, website design, responsive design, SEO">
-  <meta name="author" content="ZEROS Creative Agency">
-  <meta name="robots" content="index, follow">
-  <meta property="og:title" content="ZEROS Creative Agency - Digital Experience Design">
-  <meta property="og:description" content="We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://zerosstudio.vercel.app/">
-  <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
-  <meta property="og:locale" content="en_IN">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="ZEROS Creative Agency - Digital Experience Design">
-  <meta name="twitter:description" content="We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results.">
-  <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
-  <link rel="canonical" href="https://zerosstudio.vercel.app/">
-  <title>Creative Agency - Zeros</title>
+  <meta name="description" content="ZEROS Creative Agency - We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
+  <meta name="keywords" content="creative agency, web design, UI/UX, web development, digital agency, Indore, website design, responsive design, SEO" />
+  <meta name="author" content="ZEROS Creative Agency" />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="ZEROS Creative Agency - Digital Experience Design" />
+  <meta property="og:description" content="We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://zerosstudio.vercel.app/" />
+  <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
+  <meta property="og:locale" content="en_IN" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="ZEROS Creative Agency - Digital Experience Design" />
+  <meta name="twitter:description" content="We craft stunning digital experiences with modern web design, UI/UX, and development services. Based in Indore, we create websites that drive results." />
+  <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
+  <link rel="canonical" href="https://zerosstudio.vercel.app/" />
+  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/" />
+  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/" />
+  <title>Zeros Studio</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./assets/css/critical.css">
+  <link rel="preload" href="./assets/css/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <link rel="preload" href="./assets/css/fontawesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="./assets/css/style.min.css"></noscript>
+  <noscript><link rel="stylesheet" href="./assets/css/fontawesome.min.css"></noscript>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
-
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [{
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://zerosstudio.vercel.app/"
+    }]
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://zerosstudio.vercel.app/",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://zerosstudio.vercel.app/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
 
 </head>
 
@@ -988,7 +1016,7 @@
               <img src="./assets/images/avtar.jpeg" alt="Anuj Lumar" />
             </div>
             <div class="member-info">
-              <h2>ANuj Kumar</h2>
+              <h2>Anuj Kumar</h2>
               <h3>Founder & CEO</h3>
               <p class="member-description">
                 Innovative leader with a passion for technology and design. 2+
@@ -1206,7 +1234,7 @@
   <button id="scrollToTop" class="scroll-to-top">
     <i class="fas fa-arrow-up"></i>
   </button>
-  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/script.min.js"></script>
 
 </body>
 
