--- a/services.html
+++ b/services.html
@@ -4,28 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-    <meta name="description" content="Explore our digital services at Creative Agency Zeros - Web development, UI/UX design, mobile apps, SEO, and brand identity solutions in Indore.">
-    <meta name="keywords" content="web development, ui/ux design, mobile apps, seo, digital marketing, brand identity, creative services, indore">
-    <meta name="author" content="Zeros Studio">
-    <meta name="robots" content="index, follow">
-    <meta property="og:title" content="Our Services - Creative Agency Zeros">
-    <meta property="og:description" content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and brand identity solutions.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://zerosstudio.vercel.app/services.html">
-    <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
-    <meta property="og:locale" content="en_IN">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Our Services - Creative Agency Zeros">
-    <meta name="twitter:description" content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and brand identity solutions.">
-    <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
-    <link rel="canonical" href="https://zerosstudio.vercel.app/services.html">
-    <title>Our Services - Zeros</title>
+    <meta name="description" content="Explore our digital services at Creative Agency Zeros - Web development, UI/UX design, mobile apps, SEO, and brand identity solutions in Indore." />
+    <meta name="keywords" content="web development, ui/ux design, mobile apps, seo, digital marketing, brand identity, creative services, indore" />
+    <meta name="author" content="Zeros Studio" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Zeros Studio" />
+    <meta property="og:description" content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and brand identity solutions." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://zerosstudio.vercel.app/services.html" />
+    <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
+    <meta property="og:locale" content="en_IN" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Our Services - Creative Agency Zeros" />
+    <meta name="twitter:description" content="Explore our comprehensive digital services including web development, UI/UX design, mobile apps, SEO, and brand identity solutions." />
+    <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
+    <link rel="canonical" href="https://zerosstudio.vercel.app/services.html" />
+    <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/services.html" />
+    <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/services.html" />
+    <title>Our Services - Creative Agency Zeros</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./assets/css/critical.css">
+    <link rel="preload" href="./assets/css/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="./assets/css/style.min.css"></noscript>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <script src="./assets/js/particles.min.js"></script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://zerosstudio.vercel.app/"
+      },{
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Services",
+        "item": "https://zerosstudio.vercel.app/services.html"
+      }]
+    }
+    </script>
   </head>
 
   <body>
@@ -487,7 +508,7 @@
       <i class="fas fa-arrow-up"></i>
     </button>
 
-    <script src="./assets/js/script.js"></script>
-    <script src="./assets/js/services.js"></script>
+    <script src="./assets/js/script.min.js"></script>
+    <script src="./assets/js/services.min.js"></script>
   </body>
 </html>
