--- a/Contact.html
+++ b/Contact.html
@@ -23,10 +23,8 @@
   <title>Contact Zeros Studio - Web Design Agency in Indore</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./assets/css/critical.css">
-  <link rel="preload" href="./assets/css/contact.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <link rel="preload" href="./assets/css/fontawesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="./assets/css/contact.min.css"></noscript>
-  <noscript><link rel="stylesheet" href="./assets/css/fontawesome.min.css"></noscript>
+  <link rel="stylesheet" href="./assets/css/contact.min.css">
+  <link rel="stylesheet" href="./assets/css/fontawesome.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
   <script type="application/ld+json">
