--- a/about.html
+++ b/about.html
@@ -25,10 +25,8 @@
 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./assets/css/critical.css">
-  <link rel="preload" href="./assets/css/about-style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <link rel="preload" href="./assets/css/fontawesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="./assets/css/about-style.min.css"></noscript>
-  <noscript><link rel="stylesheet" href="./assets/css/fontawesome.min.css"></noscript>
+  <link rel="stylesheet" href="./assets/css/about-style.min.css">
+  <link rel="stylesheet" href="./assets/css/fontawesome.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
