--- a/Contact.html
+++ b/Contact.html
@@ -5,27 +5,49 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-  <meta name="description" content="Contact Creative Agency Zeros in Indore for web development, UI/UX design, mobile apps, SEO, and digital marketing services. Get a free consultation today.">
-  <meta name="keywords" content="contact, web development, ui/ux design, mobile apps, seo, digital marketing, creative agency, indore, vijaynagar">
+  <meta name="description" content="Contact Zeros Studio in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Get a free consultation today.">
+  <meta name="keywords" content="contact, web development, ui/ux design, mobile apps, seo, digital marketing, creative agency, indore, vijaynagar, consultation">
   <meta name="author" content="Zeros Studio">
   <meta name="robots" content="index, follow">
-  <meta property="og:title" content="Contact Us - Creative Agency Zeros">
-  <meta property="og:description" content="Get in touch with our creative agency in Indore for web development, UI/UX design, mobile apps, SEO, and digital marketing services.">
+  <meta property="og:title" content="Contact Zeros Studio - Web Design Agency in Indore">
+  <meta property="og:description" content="Get in touch with our creative agency in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Schedule a free consultation.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://zerosstudio.vercel.app/Contact.html">
   <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
   <meta property="og:locale" content="en_IN">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Contact Us - Creative Agency Zeros">
-  <meta name="twitter:description" content="Get in touch with our creative agency in Indore for web development, UI/UX design, mobile apps, SEO, and digital marketing services.">
+  <meta name="twitter:title" content="Contact Zeros Studio - Web Design Agency in Indore">
+  <meta name="twitter:description" content="Get in touch with our creative agency in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Schedule a free consultation.">
   <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
   <link rel="canonical" href="https://zerosstudio.vercel.app/Contact.html">
-  <title>Creative Agency - Zeros</title>
+  <title>Contact Zeros Studio - Web Design Agency in Indore</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="./assets/css/contact.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./assets/css/critical.css">
+  <link rel="stylesheet" href="./assets/css/contact.min.css">
+  <link rel="stylesheet" href="./assets/css/fontawesome.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ContactPage",
+    "name": "Contact Zeros Studio",
+    "description": "Get in touch with our creative agency in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Schedule a free consultation.",
+    "url": "https://zerosstudio.vercel.app/Contact.html",
+    "contactOption": "TollFree",
+    "telephone": "+91-9334541428",
+    "email": "zeros.studio19@gmail.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Vijaynagar",
+      "addressLocality": "Indore",
+      "addressRegion": "MP",
+      "postalCode": "452001",
+      "addressCountry": "IN"
+    }
+  }
+  </script>
  
 </head>
 
@@ -75,10 +97,10 @@
       <div class="container">
         <div class="section-header">
           <span class="section-badge">Let's Talk</span>
-          <h2 class="section-title">Start Your Project</h2>
+          <h2 class="section-title">Start Your Web Design Project</h2>
           <p class="section-subtitle">
-            Fill out the form below to help us understand your vision and
-            requirements.
+            Fill out the form below to help us understand your web design vision and
+            requirements for your business in Indore.
           </p>
         </div>
 
@@ -90,7 +112,7 @@
         <form action="https://formspree.io/f/myznkvwl" method="POST" class="intake-form" id="contactForm">
           <!-- Client Information -->
           <fieldset>
-            <legend>1. Client Information</legend>
+            <legend>1. Client Information for Web Design Project</legend>
             <div class="form-grid">
               <div class="form-group">
                 <label for="name">Full Name *</label>
@@ -113,7 +135,7 @@
 
           <!-- Business Details -->
           <fieldset>
-            <legend>2. Business Details</legend>
+            <legend>2. Business Details for Web Design</legend>
             <div class="form-grid">
               <div class="form-group">
                 <label for="industry">Your Industry</label>
@@ -131,7 +153,7 @@
           </fieldset>
 
           <fieldset>
-            <legend>3. Website Purpose</legend>
+            <legend>3. Website Purpose and Type</legend>
             <div class="form-group">
               <label>What type of website do you need? (Select all that
                 apply)</label>
@@ -152,7 +174,7 @@
 
           <!-- Design Preferences -->
           <fieldset>
-            <legend>4. Design Preferences</legend>
+            <legend>4. Web Design Preferences</legend>
             <div class="form-group">
               <label for="style">Desired style/aesthetic</label>
               <input type="text" id="style" name="style" placeholder="e.g., Minimal, Modern, Playful, Corporate" />
@@ -170,7 +192,7 @@
 
           <!-- Features & Functionality -->
           <fieldset>
-            <legend>5. Features & Functionality</legend>
+            <legend>5. Web Design Features & Functionality</legend>
             <div class="form-group">
               <label>What features are required? (Select all that apply)</label>
               <div class="checkbox-group features-grid">
@@ -192,7 +214,7 @@
 
           <!-- Content, Budget & Timeline -->
           <fieldset>
-            <legend>6. Content, Budget & Timeline</legend>
+            <legend>6. Content, Budget & Timeline for Web Design</legend>
             <div class="form-grid">
               <div class="form-group">
                 <label for="content_provider">Who will provide the content?</label>
@@ -222,7 +244,7 @@
 
           <!-- Additional Notes -->
           <fieldset>
-            <legend>7. Additional Notes</legend>
+            <legend>7. Additional Notes for Web Design Project</legend>
             <div class="form-group">
               <label for="notes">Is there anything else you'd like to share?</label>
               <textarea id="notes" name="notes" rows="4"
@@ -312,6 +334,12 @@
                 <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" title="Twitter">
                   <i class="fab fa-twitter"></i>
                 </a>
+                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" title="Facebook">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" title="YouTube">
+                  <i class="fab fa-youtube"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -323,7 +351,7 @@
     </div>
   </footer>
 
- <script src="./assets/js/contact.js"></script>
+ <script src="./assets/js/contact.min.js"></script>
 </body>
 
 </html>
