--- a/about.html
+++ b/about.html
@@ -1,34 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-  <meta name="description" content="Learn about Creative Agency Zeros - Our story, vision, and journey in crafting digital experiences. Discover how we transform businesses through innovative design and technology.">
-  <meta name="keywords" content="creative agency, about us, digital transformation, web design, indore, vijaynagar">
-  <meta name="author" content="Zeros Studio">
-  <meta name="robots" content="index, follow">
-  <meta property="og:title" content="About Us - Creative Agency Zeros">
-  <meta property="og:description" content="Learn about our story, vision, and journey in crafting digital experiences that transform businesses.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://zerosstudio.vercel.app/about.html">
-  <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
-  <meta property="og:locale" content="en_IN">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="About Us - Creative Agency Zeros">
-  <meta name="twitter:description" content="Learn about our story, vision, and journey in crafting digital experiences that transform businesses.">
-  <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
-  <link rel="canonical" href="https://zerosstudio.vercel.app/about.html">
-  <title>Creative Agency - Zeros</title>
+  <meta name="description" content="Learn about Zeros Studio - Our story, vision, and journey in crafting digital experiences. Discover how we transform businesses through innovative design and technology." />
+  <meta name="keywords" content="creative agency, about us, digital transformation, web design, indore, vijaynagar, creative studio" />
+  <meta name="author" content="Zeros Studio" />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="About Zeros Studio - Creative Web Design Agency" />
+  <meta property="og:description" content="Learn about our story, vision, and journey in crafting digital experiences that transform businesses through innovative design and technology." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://zerosstudio.vercel.app/about.html" />
+  <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
+  <meta property="og:locale" content="en_IN" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="About Zeros Studio - Creative Web Design Agency" />
+  <meta name="twitter:description" content="Learn about our story, vision, and journey in crafting digital experiences that transform businesses through innovative design and technology." />
+  <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
+  <link rel="canonical" href="https://zerosstudio.vercel.app/about.html" />
+  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/about.html" />
+  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/about.html" />
+  <title>About Zeros Studio - Creative Web Design Agency</title>
 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="./assets/css/about-style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./assets/css/critical.css">
+  <link rel="stylesheet" href="./assets/css/about-style.min.css">
+  <link rel="stylesheet" href="./assets/css/fontawesome.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
-
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [{
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://zerosstudio.vercel.app/"
+    },{
+      "@type": "ListItem",
+      "position": 2,
+      "name": "About",
+      "item": "https://zerosstudio.vercel.app/about.html"
+    }]
+  }
+  </script>
 
 </head>
 
@@ -268,7 +287,7 @@
           <div class="team-member">
             <div class="team-card">
               <div class="member-image">
-                <img src="./assets/images/avtar2.jpeg" alt="Anuj Kumar" />
+                <img src="./assets/images/avtar.jpeg" alt="Anuj Kumar" />
               </div>
               <div class="member-info">
                 <h2>Anuj Kumar</h2>
@@ -299,10 +318,10 @@
           <div class="team-member">
             <div class="team-card">
               <div class="member-image">
-                <img src="./assets/images/avtar3.jpg" alt="Satish Chaudhary" />
+                <img src="./assets/images/avtar2.jpeg" alt="Satish Chaudhary" />
               </div>
               <div class="member-info">
-                <h2>satish chaudhary</h2>
+                <h2>Satish chaudhary</h2>
                 <h3>Frontend Developer</h3>
                 <p class="member-description">
                   Builds sleek, responsive interfaces with modern frameworks.
@@ -330,7 +349,7 @@
           <div class="team-member">
             <div class="team-card">
               <div class="member-image">
-                <img src="./assets/images/avtar.jpeg" alt="Sahil Singh" />
+                <img src="./assets/images/avtar3.jpg" alt="Sahil Singh" />
               </div>
               <div class="member-info">
                 <h2>Sahil Singh</h2>
@@ -468,6 +487,9 @@
                   <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" title="YouTube">
                     <i class="fab fa-youtube"></i>
                   </a>
+                  <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" title="Facebook">
+                    <i class="fab fa-facebook-f"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -488,7 +510,7 @@
     </footer>
   </main>
 
-  <script src="./assets/js/about.js"></script>
+  <script src="./assets/js/about.min.js"></script>
 </body>
 
 </html>
