enhance the responsiveness

--- a/Contact.html
+++ b/Contact.html
@@ -359,6 +359,50 @@
     </div>
   </footer>
 
+  <script>
+    // Show/hide mobile menu
+    function showSecondNav() {
+        let secondNav = document.querySelector(".second-nav");
+        let hamburger = document.getElementById("hamburger");
+
+        secondNav.classList.toggle("active-second-nav");
+        hamburger.classList.toggle("active");
+    }
+
+    // Close mobile menu when clicking outside
+    document.addEventListener('click', function (event) {
+        const secondNav = document.querySelector('.second-nav');
+        const hamburger = document.getElementById('hamburger');
+
+        if (secondNav && secondNav.classList.contains('active-second-nav') &&
+            !secondNav.contains(event.target) &&
+            event.target !== hamburger) {
+            secondNav.classList.remove('active-second-nav');
+            hamburger.classList.remove('active');
+        }
+    });
+
+    // Close mobile menu when clicking on a link
+    document.querySelectorAll('.second-nav-li a').forEach(link => {
+        link.addEventListener('click', () => {
+            const secondNav = document.querySelector('.second-nav');
+            const hamburger = document.getElementById('hamburger');
+
+            secondNav.classList.remove('active-second-nav');
+            hamburger.classList.remove('active');
+        });
+    });
+
+    // Header scroll effect
+    window.addEventListener("scroll", function () {
+        const header = document.querySelector("header");
+        if (window.scrollY > 50) {
+            header.classList.add("scrolled");
+        } else {
+            header.classList.remove("scrolled");
+        }
+    });
+  </script>
   <script src="./assets/js/contact.js"></script>
 </body>
 
