--- a/Purchase.html
+++ b/Purchase.html
@@ -136,7 +136,7 @@
               <li><i class="fas fa-check-circle"></i> Email Support</li>
               <li><i class="fas fa-times-circle"></i> Advanced Analytics</li>
             </ul>
-            <a href="#" class="cta-button">Get Started</a>
+            <a href="./Contact.html" class="cta-button">Get Started</a>
           </div>
 
           <!-- Pro Plan (Recommended) -->
@@ -158,7 +158,7 @@
               </li>
               <li><i class="fas fa-check-circle"></i> Advanced Analytics</li>
             </ul>
-            <a href="#" class="cta-button">Choose Plan</a>
+            <a href="./Contact.html" class="cta-button">Choose Plan</a>
           </div>
 
           <!-- Enterprise Plan -->
@@ -178,7 +178,7 @@
               </li>
               <li><i class="fas fa-check-circle"></i> Custom Reporting</li>
             </ul>
-            <a href="#" class="cta-button">Contact Us</a>
+            <a href="./Contact.html" class="cta-button">Contact Us</a>
           </div>
         </div>
       </div>
