--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
     <link rel="canonical" href="https://zerosstudio.vercel.app/services.html" />
     <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/services.html" />
     <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/services.html" />
-    <title>Our Services - Creative Agency Zeros</title>
+    <title>Our Services - Zeros Studio</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/critical.css">
