--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
           </iframe>
         </div>
 
-        <form action="https://formspree.io/f/xrbyedlg" id="contact-form" class="contact-form">
+        <form action="https://formspree.io/f/xrbyedlg" method="POST" id="contact-form" class="contact-form">
           <div class="form-group">
             <input type="text" id="name" name="name" required />
             <label for="name">Your Name</label>
@@ -1207,7 +1207,7 @@
             <p class="footer-newsletter-text">
               Subscribe to our newsletter for the latest updates and offers
             </p>
-            <form action="https://formspree.io/f/xrbyedlg" post="Post" class="footer-newsletter-form"
+            <form action="https://formspree.io/f/xrbyedlg" method="POST" class="footer-newsletter-form"
               id="newsletterForm">
               <input type="email" placeholder="Enter your email" required />
               <button type="submit" class="newsletter-button" aria-label="Subscribe to newsletter">
