--- a/blog-post.html
+++ b/blog-post.html
@@ -91,7 +91,7 @@
             <div class="comments-section">
               <h3>Comments (<span id="commentCount">0</span>)</h3>
               
-              <form class="comment-form" id="commentForm">
+              <form class="comment-form" id="commentForm" method="POST">
                 <div class="form-group">
                   <input type="text" id="commentName" placeholder="Your Name" required>
                 </div>
@@ -194,7 +194,7 @@
             <p class="footer-newsletter-text">
               Subscribe to our newsletter for the latest updates and offers
             </p>
-            <form class="footer-newsletter-form">
+            <form class="footer-newsletter-form" method="POST">
               <input type="email" placeholder="Enter your email" required />
               <button type="submit" class="newsletter-button" aria-label="Subscribe to newsletter">
                 <i class="fas fa-paper-plane"></i>
