--- a/blog.html
+++ b/blog.html
@@ -142,7 +142,7 @@
             <div class="sidebar-widget">
               <h3 class="widget-title">Newsletter</h3>
               <p class="widget-description">Subscribe to get the latest posts delivered to your inbox.</p>
-              <form class="newsletter-form">
+              <form class="newsletter-form" method="POST">
                 <input type="email" placeholder="Your email address" required>
                 <button type="submit" class="subscribe-button">Subscribe</button>
               </form>
@@ -212,7 +212,7 @@
             <p class="footer-newsletter-text">
               Subscribe to our newsletter for the latest updates and offers
             </p>
-            <form class="footer-newsletter-form">
+            <form class="footer-newsletter-form" method="POST">
               <input type="email" placeholder="Enter your email" required />
               <button type="submit" class="newsletter-button" aria-label="Subscribe to newsletter">
                 <i class="fas fa-paper-plane"></i>
