--- a/services.html
+++ b/services.html
@@ -438,7 +438,7 @@
               <p class="footer-newsletter-text">
                 Subscribe to our newsletter for the latest updates and offers
               </p>
-              <form action="https://formspree.io/f/xrbyedlg" method="POST" class="footer-newsletter-form" id="newsletterForm">
+              <form action="https://formspree.io/f/myznkvwl" method="POST" class="footer-newsletter-form" id="newsletterForm">
                 <input type="email" placeholder="Enter your email" required />
                 <button type="submit" class="newsletter-button" aria-label="Subscribe to newsletter">
                   <i class="fas fa-paper-plane"></i>
