optimize the website and upgrade seo

--- a/about-zeros-studio.html
+++ b/about-zeros-studio.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-  <meta name="description" content="Learn about Zeros Studio - Our story, vision, and journey in crafting digital experiences. Discover how we transform businesses through innovative design and technology." />
-  <meta name="keywords" content="creative agency, about us, digital transformation, web design, indore, vijaynagar, creative studio" />
+  <meta name="description"
+    content="Learn about Zeros Studio - Our story, vision, and journey in crafting digital experiences. Discover how we transform businesses through innovative design and technology." />
+  <meta name="keywords"
+    content="creative agency, about us, digital transformation, web design, indore, vijaynagar, creative studio" />
   <meta name="author" content="Zeros Studio" />
   <meta name="robots" content="index, follow" />
   <meta property="og:title" content="About Zeros Studio - Creative Web Design Agency" />
-  <meta property="og:description" content="Learn about our story, vision, and journey in crafting digital experiences that transform businesses through innovative design and technology." />
+  <meta property="og:description"
+    content="Learn about our story, vision, and journey in crafting digital experiences that transform businesses through innovative design and technology." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://zerosstudio.vercel.app/about.html" />
+  <meta property="og:url" content="https://zerosstudio.vercel.app/about-zeros-studio.html" />
   <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
   <meta property="og:locale" content="en_IN" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="About Zeros Studio - Creative Web Design Agency" />
-  <meta name="twitter:description" content="Learn about our story, vision, and journey in crafting digital experiences that transform businesses through innovative design and technology." />
+  <meta name="twitter:description"
+    content="Learn about our story, vision, and journey in crafting digital experiences that transform businesses through innovative design and technology." />
   <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png" />
-  <link rel="canonical" href="https://zerosstudio.vercel.app/about.html" />
-  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/about.html" />
-  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/about.html" />
+  <link rel="canonical" href="https://zerosstudio.vercel.app/about-zeros-studio.html" />
+  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/about-zeros-studio.html" />
+  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/about-zeros-studio.html" />
   <title>About Zeros Studio - Creative Web Design Agency</title>
 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -43,7 +48,7 @@
       "@type": "ListItem",
       "position": 2,
       "name": "About",
-      "item": "https://zerosstudio.vercel.app/about.html"
+      "item": "https://zerosstudio.vercel.app/about-zeros-studio.html"
     }]
   }
   </script>
@@ -63,16 +68,16 @@
           <a href="#" class="nav-link"><span>About</span></a>
         </li>
         <li>
-          <a href="services.html" class="nav-link"><span>Services</span></a>
+          <a href="web-design-development-services.html" class="nav-link"><span>Services</span></a>
         </li>
         <li>
-          <a href="projects.html" class="nav-link"><span>Projects</span></a>
+          <a href="web-design-development-projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
-          <a href="blog.html" class="nav-link"><span>Blog</span></a>
+          <a href="./404-page-not-found.html" class="nav-link"><span>Blog</span></a>
         </li>
         <li>
-          <a href="Contact.html" class="nav-link"><span>Contact</span></a>
+          <a href="contact-us.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
       <div id="hamburger" onclick="showSecondNav()">
@@ -83,11 +88,11 @@
     </nav>
     <ul class="second-nav">
       <li class="second-nav-li"><a href="index.html">Home</a></li>
-      <li class="second-nav-li"><a href="about.html">About</a></li>
-      <li class="second-nav-li"><a href="services.html">Services</a></li>
-      <li class="second-nav-li"><a href="projects.html">Project</a></li>
-      <li class="second-nav-li"><a href="blog.html">Blog</a></li>
-      <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
+      <li class="second-nav-li"><a href="about-zeros-studio.html">About</a></li>
+      <li class="second-nav-li"><a href="web-design-development-services.html">Services</a></li>
+      <li class="second-nav-li"><a href="web-design-development-projects.html">Project</a></li>
+      <li class="second-nav-li"><a href="./404-page-not-found.html">Blog</a></li>
+      <li class="second-nav-li"><a href="contact-us.html">Contact</a></li>
     </ul>
   </header>
 
@@ -308,8 +313,8 @@
                     class="social-link" title="LinkedIn">
                     <i class="fab fa-linkedin-in"></i>
                   </a>
-                  <a href="https://twitter.com/anujkumar" target="_blank" rel="noopener noreferrer"
-                    class="social-link" title="Twitter">
+                  <a href="https://twitter.com/anujkumar" target="_blank" rel="noopener noreferrer" class="social-link"
+                    title="Twitter">
                     <i class="fab fa-twitter"></i>
                   </a>
                 </div>
@@ -339,8 +344,8 @@
                     class="social-link" title="LinkedIn">
                     <i class="fab fa-linkedin-in"></i>
                   </a>
-                  <a href="https://dribbble.com/satishchaudhary" target="_blank" rel="noopener noreferrer" class="social-link"
-                    title="Dribbble">
+                  <a href="https://dribbble.com/satishchaudhary" target="_blank" rel="noopener noreferrer"
+                    class="social-link" title="Dribbble">
                     <i class="fab fa-dribbble"></i>
                   </a>
                 </div>
@@ -393,16 +398,16 @@
                   user research and prototyping.
                 </p>
                 <div class="team-socials">
-                  <a href="https://github.com/aryagupta" target="_blank" rel="noopener noreferrer"
-                    class="social-link" title="GitHub">
+                  <a href="https://github.com/aryagupta" target="_blank" rel="noopener noreferrer" class="social-link"
+                    title="GitHub">
                     <i class="fab fa-github"></i>
                   </a>
                   <a href="https://linkedin.com/in/aryagupta" target="_blank" rel="noopener noreferrer"
                     class="social-link" title="LinkedIn">
                     <i class="fab fa-linkedin-in"></i>
                   </a>
-                  <a href="https://behance.net/aryagupta" target="_blank" rel="noopener noreferrer"
-                    class="social-link" title="Behance">
+                  <a href="https://behance.net/aryagupta" target="_blank" rel="noopener noreferrer" class="social-link"
+                    title="Behance">
                     <i class="fab fa-behance"></i>
                   </a>
                 </div>
@@ -443,10 +448,10 @@
               <h4>Quick Links</h4>
               <ul class="footer-links">
                 <li><a href="#">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="about-zeros-studio.html">About Us</a></li>
+                <li><a href="web-design-development-services.html">Services</a></li>
+                <li><a href="web-design-development-projects.html">Projects</a></li>
+                <li><a href="contact-us.html">Contact</a></li>
               </ul>
             </div>
 
@@ -466,9 +471,10 @@
               <p class="footer-newsletter-text">
                 Subscribe to our newsletter for the latest updates and offers
               </p>
-              <form action="https://formspree.io/f/myznkvwl" method="POST" class="footer-newsletter-form" id="newsletterForm">
+              <form action="https://formspree.io/f/myznkvwl" method="POST" class="footer-newsletter-form"
+                id="newsletterForm">
                 <input type="email" placeholder="Enter your email" required />
-                <button type="submit" class="newsletter-button" >
+                <button type="submit" class="newsletter-button" aria-label="Subscribe to newsletter">
                   <i class="fas fa-paper-plane"></i>
                 </button>
               </form>
@@ -500,9 +506,9 @@
               &copy; 2022-32 Zeros Studio. All rights reserved.
             </div>
             <div class="footer-links-bottom">
-              <a href="#">Privacy Policy</a>
-              <a href="#">Terms of Service</a>
-              <a href="#">Sitemap</a>
+              <a href="our-privacy-policy.html">Privacy Policy</a>
+              <a href="terms-of-services.html">Terms of Service</a>
+              <a href="sitemap.xml">Sitemap</a>
             </div>
           </div>
         </div>
