--- a/contact-us.html
+++ b/contact-us.html
@@ -15,7 +15,7 @@
   <meta property="og:description"
     content="Get in touch with our creative agency in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Schedule a free consultation.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://zerosstudio.vercel.app/Contact.html">
+  <meta property="og:url" content="https://zerosstudio.vercel.app/contact-us.html">
   <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
   <meta property="og:locale" content="en_IN">
   <meta name="twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
   <meta name="twitter:description"
     content="Get in touch with our creative agency in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Schedule a free consultation.">
   <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
-  <link rel="canonical" href="https://zerosstudio.vercel.app/Contact.html">
+  <link rel="canonical" href="https://zerosstudio.vercel.app/contact-us.html">
   <title>Contact Zeros Studio - Web Design Agency in Indore</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./assets/css/critical.css">
@@ -37,7 +37,7 @@
     "@type": "ContactPage",
     "name": "Contact Zeros Studio",
     "description": "Get in touch with our creative agency in Indore for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Schedule a free consultation.",
-    "url": "https://zerosstudio.vercel.app/Contact.html",
+    "url": "https://zerosstudio.vercel.app/contact-us.html",
     "contactOption": "TollFree",
     "telephone": "+91-9334541428",
     "email": "zeros.studio19@gmail.com",
@@ -64,19 +64,19 @@
           <a href="index.html" class="nav-link"><span>Home</span></a>
         </li>
         <li>
-          <a href="about.html" class="nav-link"><span>About</span></a>
+          <a href="about-zeros-studio.html" class="nav-link"><span>About</span></a>
         </li>
         <li>
-          <a href="services.html" class="nav-link"><span>Services</span></a>
+          <a href="web-design-development-services.html" class="nav-link"><span>Services</span></a>
         </li>
         <li>
-          <a href="projects.html" class="nav-link"><span>Projects</span></a>
+          <a href="web-design-development-projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
-          <a href="blog.html" class="nav-link"><span>Blog</span></a>
+          <a href="./404-page-not-found.html" class="nav-link"><span>Blog</span></a>
         </li>
         <li>
-          <a href="Contact.html" class="nav-link"><span>Contact</span></a>
+          <a href="contact-us.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
       <div id="hamburger" onclick="showSecondNav()">
@@ -90,11 +90,11 @@
   <!-- Mobile Navigation -->
   <ul class="second-nav">
     <li class="second-nav-li"><a href="index.html">Home</a></li>
-    <li class="second-nav-li"><a href="about.html">About</a></li>
-    <li class="second-nav-li"><a href="services.html">Services</a></li>
-    <li class="second-nav-li"><a href="projects.html">Project</a></li>
-    <li class="second-nav-li"><a href="blog.html">Blog</a></li>
-    <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
+    <li class="second-nav-li"><a href="about-zeros-studio.html">About</a></li>
+    <li class="second-nav-li"><a href="web-design-development-services.html">Services</a></li>
+    <li class="second-nav-li"><a href="web-design-development-projects.html">Project</a></li>
+    <li class="second-nav-li"><a href="./404-page-not-found.html">Blog</a></li>
+    <li class="second-nav-li"><a href="contact-us.html">Contact</a></li>
   </ul>
 
   <!-- Main Content -->
@@ -297,10 +297,10 @@
             <h4>Quick Links</h4>
             <ul class="footer-links">
               <li><a href="#">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="projects.html">Projects</a></li>
-              <li><a href="Contact.html">Contact</a></li>
+              <li><a href="about-zeros-studio.html">About Us</a></li>
+              <li><a href="web-design-development-services.html">Services</a></li>
+              <li><a href="web-design-development-projects.html">Projects</a></li>
+              <li><a href="contact-us.html">Contact</a></li>
             </ul>
           </div>
 
@@ -320,9 +320,10 @@
             <p class="footer-newsletter-text">
               Subscribe to our newsletter for the latest updates and offers
             </p>
-            <form action="https://formspree.io/f/myznkvwl" method="POST" class="footer-newsletter-form" id="newsletterForm">
+            <form action="https://formspree.io/f/myznkvwl" method="POST" class="footer-newsletter-form"
+              id="newsletterForm">
               <input type="email" placeholder="Enter your email" required />
-              <button type="submit" class="newsletter-button" >
+              <button type="submit" class="newsletter-button" aria-label="Subscribe to newsletter">
                 <i class="fas fa-paper-plane"></i>
               </button>
             </form>
@@ -335,11 +336,14 @@
                 <a href="https://github.com" target="_blank" rel="noopener noreferrer" title="GitHub">
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer" title="LinkedIn">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
                 <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" title="Twitter">
                   <i class="fab fa-twitter"></i>
+                </a>
+                <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" title="Facebook">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer" title="YouTube">
+                  <i class="fab fa-youtube"></i>
                 </a>
               </div>
             </div>
@@ -347,60 +351,60 @@
         </div>
       </div>
       <div class="footer-bottom">
-          <div class="copyright">
-            &copy; 2022-32 Zeros Studio. All rights reserved.
-          </div>
-          <div class="footer-links-bottom">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Service</a>
-            <a href="#">Sitemap</a>
-          </div>
+        <div class="copyright">
+          &copy; 2022-32 Zeros Studio. All rights reserved.
         </div>
+        <div class="footer-links-bottom">
+          <a href="our-privacy-policy.html">Privacy Policy</a>
+          <a href="terms-of-services.html">Terms of Service</a>
+          <a href="sitemap.xml">Sitemap</a>
+        </div>
+      </div>
     </div>
   </footer>
 
   <script>
     // Show/hide mobile menu
     function showSecondNav() {
-        let secondNav = document.querySelector(".second-nav");
-        let hamburger = document.getElementById("hamburger");
+      let secondNav = document.querySelector(".second-nav");
+      let hamburger = document.getElementById("hamburger");
 
-        secondNav.classList.toggle("active-second-nav");
-        hamburger.classList.toggle("active");
+      secondNav.classList.toggle("active-second-nav");
+      hamburger.classList.toggle("active");
     }
 
     // Close mobile menu when clicking outside
     document.addEventListener('click', function (event) {
-        const secondNav = document.querySelector('.second-nav');
-        const hamburger = document.getElementById('hamburger');
+      const secondNav = document.querySelector('.second-nav');
+      const hamburger = document.getElementById('hamburger');
 
-        if (secondNav && secondNav.classList.contains('active-second-nav') &&
-            !secondNav.contains(event.target) &&
-            event.target !== hamburger) {
-            secondNav.classList.remove('active-second-nav');
-            hamburger.classList.remove('active');
-        }
+      if (secondNav && secondNav.classList.contains('active-second-nav') &&
+        !secondNav.contains(event.target) &&
+        event.target !== hamburger) {
+        secondNav.classList.remove('active-second-nav');
+        hamburger.classList.remove('active');
+      }
     });
 
     // Close mobile menu when clicking on a link
     document.querySelectorAll('.second-nav-li a').forEach(link => {
-        link.addEventListener('click', () => {
-            const secondNav = document.querySelector('.second-nav');
-            const hamburger = document.getElementById('hamburger');
+      link.addEventListener('click', () => {
+        const secondNav = document.querySelector('.second-nav');
+        const hamburger = document.getElementById('hamburger');
 
-            secondNav.classList.remove('active-second-nav');
-            hamburger.classList.remove('active');
-        });
+        secondNav.classList.remove('active-second-nav');
+        hamburger.classList.remove('active');
+      });
     });
 
     // Header scroll effect
     window.addEventListener("scroll", function () {
-        const header = document.querySelector("header");
-        if (window.scrollY > 50) {
-            header.classList.add("scrolled");
-        } else {
-            header.classList.remove("scrolled");
-        }
+      const header = document.querySelector("header");
+      if (window.scrollY > 50) {
+        header.classList.add("scrolled");
+      } else {
+        header.classList.remove("scrolled");
+      }
     });
   </script>
   <script src="./assets/js/contact.js"></script>
