--- a/web-design-development-price.html
+++ b/web-design-development-price.html
@@ -5,27 +5,33 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="maCXnVAKikB9MaF_bNLmB7zY9m85XbJAFj1k1C9rq8c" />
-  <meta name="description" content="View our transparent pricing plans for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services in Indore. Choose the perfect plan for your business growth." />
-  <meta name="keywords" content="pricing, web development, ui/ux design, mobile apps, seo, digital marketing, affordable, creative agency, indore, website pricing, digital services" />
+  <meta name="description"
+    content="View our transparent pricing plans for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services in Indore. Choose the perfect plan for your business growth." />
+  <meta name="keywords"
+    content="pricing, web development, ui/ux design, mobile apps, seo, digital marketing, affordable, creative agency, indore, website pricing, digital services" />
   <meta name="author" content="Zeros Studio">
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="Pricing Plans - Zeros Studio Web Design Services">
-  <meta property="og:description" content="View our transparent pricing plans for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Choose the perfect plan for your business growth in Indore.">
+  <meta property="og:description"
+    content="View our transparent pricing plans for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Choose the perfect plan for your business growth in Indore.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://zerosstudio.vercel.app/Purchase.html">
+  <meta property="og:url" content="https://zerosstudio.vercel.app/web-design-development-price.html">
   <meta property="og:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
   <meta property="og:locale" content="en_IN">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Pricing Plans - Zeros Studio Web Design Services">
-  <meta name="twitter:description" content="View our transparent pricing plans for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Choose the perfect plan for your business growth in Indore.">
+  <meta name="twitter:description"
+    content="View our transparent pricing plans for professional web development, UI/UX design, mobile apps, SEO, and digital marketing services. Choose the perfect plan for your business growth in Indore.">
   <meta name="twitter:image" content="https://zerosstudio.vercel.app/assets/images/project1.png">
-  <link rel="canonical" href="https://zerosstudio.vercel.app/Purchase.html">
-  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/Purchase.html">
-  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/Purchase.html">
+  <link rel="canonical" href="https://zerosstudio.vercel.app/web-design-development-price.html">
+  <link rel="alternate" hreflang="en" href="https://zerosstudio.vercel.app/web-design-development-price.html">
+  <link rel="alternate" hreflang="en-IN" href="https://zerosstudio.vercel.app/web-design-development-price.html">
   <title>Pricing Plans - Zeros Studio Web Design Services</title>
 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./assets/css/critical.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/purchase-styles.css">
@@ -44,7 +50,7 @@
       "@type": "ListItem",
       "position": 2,
       "name": "Pricing",
-      "item": "https://zerosstudio.vercel.app/Purchase.html"
+      "item": "https://zerosstudio.vercel.app/web-design-development-price.html"
     }]
   }
   </script>
@@ -60,19 +66,19 @@
           <a href="index.html" class="nav-link"><span>Home</span></a>
         </li>
         <li>
-          <a href="about.html" class="nav-link"><span>About</span></a>
+          <a href="about-zeros-studio.html" class="nav-link"><span>About</span></a>
         </li>
         <li>
-          <a href="services.html" class="nav-link"><span>Services</span></a>
+          <a href="web-design-development-services.html" class="nav-link"><span>Services</span></a>
         </li>
         <li>
-          <a href="projects.html" class="nav-link"><span>Projects</span></a>
+          <a href="web-design-development-projects.html" class="nav-link"><span>Projects</span></a>
         </li>
         <li>
-          <a href="blog.html" class="nav-link"><span>Blog</span></a>
+          <a href="./404-page-not-found.html" class="nav-link"><span>Blog</span></a>
         </li>
         <li>
-          <a href="Contact.html" class="nav-link"><span>Contact</span></a>
+          <a href="contact-us.html" class="nav-link"><span>Contact</span></a>
         </li>
       </ul>
       <div id="hamburger" onclick="showSecondNav()">
@@ -83,11 +89,11 @@
     </nav>
     <ul class="second-nav">
       <li class="second-nav-li"><a href="index.html">Home</a></li>
-      <li class="second-nav-li"><a href="about.html">About</a></li>
-      <li class="second-nav-li"><a href="services.html">Services</a></li>
-      <li class="second-nav-li"><a href="projects.html">Project</a></li>
-      <li class="second-nav-li"><a href="blog.html">Blog</a></li>
-      <li class="second-nav-li"><a href="Contact.html">Contact</a></li>
+      <li class="second-nav-li"><a href="about-zeros-studio.html">About</a></li>
+      <li class="second-nav-li"><a href="web-design-development-services.html">Services</a></li>
+      <li class="second-nav-li"><a href="web-design-development-projects.html">Project</a></li>
+      <li class="second-nav-li"><a href="./404-page-not-found.html">Blog</a></li>
+      <li class="second-nav-li"><a href="contact-us.html">Contact</a></li>
     </ul>
   </header>
 
@@ -136,7 +142,7 @@
               <li><i class="fas fa-check-circle"></i> Email Support</li>
               <li><i class="fas fa-times-circle"></i> Advanced Analytics</li>
             </ul>
-            <a href="./Contact.html" class="cta-button">Get Started</a>
+            <a href="./contact-us.html" class="cta-button">Get Started</a>
           </div>
 
           <!-- Pro Plan (Recommended) -->
@@ -158,7 +164,7 @@
               </li>
               <li><i class="fas fa-check-circle"></i> Advanced Analytics</li>
             </ul>
-            <a href="./Contact.html" class="cta-button">Choose Plan</a>
+            <a href="./contact-us.html" class="cta-button">Choose Plan</a>
           </div>
 
           <!-- Enterprise Plan -->
@@ -178,7 +184,7 @@
               </li>
               <li><i class="fas fa-check-circle"></i> Custom Reporting</li>
             </ul>
-            <a href="./Contact.html" class="cta-button">Contact Us</a>
+            <a href="./contact-us.html" class="cta-button">Contact Us</a>
           </div>
         </div>
       </div>
@@ -266,7 +272,8 @@
         <div class="testimonials-grid">
           <div class="testimonial-card">
             <div class="testimonial-content">
-              <p>"The Professional plan has transformed our online presence. The advanced SEO tools alone have increased our traffic by 150% in just three months."</p>
+              <p>"The Professional plan has transformed our online presence. The advanced SEO tools alone have increased
+                our traffic by 150% in just three months."</p>
             </div>
             <div class="testimonial-author">
               <div class="author-info">
@@ -277,7 +284,8 @@
           </div>
           <div class="testimonial-card">
             <div class="testimonial-content">
-              <p>"As a growing startup, the Enterprise plan gave us everything we needed to scale. The 24/7 support team is responsive and knowledgeable."</p>
+              <p>"As a growing startup, the Enterprise plan gave us everything we needed to scale. The 24/7 support team
+                is responsive and knowledgeable."</p>
             </div>
             <div class="testimonial-author">
               <div class="author-info">
@@ -288,7 +296,8 @@
           </div>
           <div class="testimonial-card">
             <div class="testimonial-content">
-              <p>"The Starter plan was perfect for launching our small business website. Affordable, reliable, and the support team is always helpful."</p>
+              <p>"The Starter plan was perfect for launching our small business website. Affordable, reliable, and the
+                support team is always helpful."</p>
             </div>
             <div class="testimonial-author">
               <div class="author-info">
@@ -350,7 +359,8 @@
               <i class="fas fa-chevron-down"></i>
             </div>
             <div class="faq-answer">
-              <p>Yes, you can upgrade or downgrade your plan at any time. Your billing will be adjusted accordingly based on the remaining time in your billing cycle.</p>
+              <p>Yes, you can upgrade or downgrade your plan at any time. Your billing will be adjusted accordingly
+                based on the remaining time in your billing cycle.</p>
             </div>
           </div>
           <div class="faq-item">
@@ -368,7 +378,8 @@
               <i class="fas fa-chevron-down"></i>
             </div>
             <div class="faq-answer">
-              <p>We accept all major credit cards including Visa, MasterCard, American Express, and Discover. We also support PayPal and bank transfers.</p>
+              <p>We accept all major credit cards including Visa, MasterCard, American Express, and Discover. We also
+                support PayPal and bank transfers.</p>
             </div>
           </div>
           <div class="faq-item">
@@ -377,7 +388,8 @@
               <i class="fas fa-chevron-down"></i>
             </div>
             <div class="faq-answer">
-              <p>Yes, we offer special pricing for non-profit organizations and educational institutions. Please contact our sales team for more information.</p>
+              <p>Yes, we offer special pricing for non-profit organizations and educational institutions. Please contact
+                our sales team for more information.</p>
             </div>
           </div>
         </div>
@@ -390,7 +402,7 @@
         <div class="cta-content">
           <h2>Ready to Get Started?</h2>
           <p>Join thousands of satisfied customers who have transformed their online presence with our services.</p>
-          <a href="Contact.html" class="cta-button">Start Your Free Trial</a>
+          <a href="contact-us.html" class="cta-button">Start Your Free Trial</a>
         </div>
       </div>
     </section>
@@ -424,10 +436,10 @@
             <h4>Quick Links</h4>
             <ul class="footer-links">
               <li><a href="#">Home</a></li>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="projects.html">Projects</a></li>
-              <li><a href="Contact.html">Contact</a></li>
+              <li><a href="about-zeros-studio.html">About Us</a></li>
+              <li><a href="web-design-development-services.html">Services</a></li>
+              <li><a href="web-design-development-projects.html">Projects</a></li>
+              <li><a href="contact-us.html">Contact</a></li>
             </ul>
           </div>
 
@@ -447,9 +459,10 @@
             <p class="footer-newsletter-text">
               Subscribe to our newsletter for the latest updates and offers
             </p>
-            <form action="https://formspree.io/f/myznkvwl" method="POST" class="footer-newsletter-form" id="newsletterForm">
+            <form action="https://formspree.io/f/myznkvwl" method="POST" class="footer-newsletter-form"
+              id="newsletterForm">
               <input type="email" placeholder="Enter your email" required />
-              <button type="submit" class="newsletter-button" >
+              <button type="submit" class="newsletter-button" aria-label="Subscribe to newsletter">
                 <i class="fas fa-paper-plane"></i>
               </button>
             </form>
@@ -461,12 +474,6 @@
                 </a>
                 <a href="https://github.com" target="_blank" rel="noopener noreferrer" title="GitHub">
                   <i class="fab fa-github"></i>
-                </a>
-                <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer" title="LinkedIn">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-                <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer" title="LinkedIn">
-                  <i class="fab fa-linkedin-in"></i>
                 </a>
                 <a href="https://twitter.com" target="_blank" rel="noopener noreferrer" title="Twitter">
                   <i class="fab fa-twitter"></i>
@@ -483,7 +490,14 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 ZEROS. All rights reserved.</p>
+        <div class="copyright">
+          &copy; 2022-32 Zeros Studio. All rights reserved.
+        </div>
+        <div class="footer-links-bottom">
+          <a href="our-privacy-policy.html">Privacy Policy</a>
+          <a href="terms-of-services.html">Terms of Service</a>
+          <a href="sitemap.xml">Sitemap</a>
+        </div>
       </div>
     </div>
   </footer>
